tiny alignment fix for the scale circles in the map footer

--- a/source/scss/map.scss
+++ b/source/scss/map.scss
@@ -259,7 +259,7 @@
                 left: -21px;
                 @media (min-width: 850px){
                     font-size: 42px;
-                    margin-left:23px;
+                    margin-left:21px;
                 }
             }
         }
@@ -269,7 +269,7 @@
                 left: -36px;
                 @media (min-width: 850px){
                     font-size: 60px;
-                    margin-left:32px;
+                    margin-left:30px;
                 }
             }
         }
